--- a/demo/index.html
+++ b/demo/index.html
@@ -5,16 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>UMind</title>
-  <link rel="stylesheet" href="./libs/antd/antd.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/antd@3.10.1/dist/antd.min.css">
 </head>
 <body>
   <div id="root"></div>
-  <script src="./libs/react/react.production.min.js"></script>
-  <script src="./libs/react-dom/react-dom.production.min.js"></script>
-  <script src="./libs/prop-types/prop-types.min.js"></script>
-  <script src="./libs/moment/moment.min.js"></script>
-  <script src="./libs/antd/antd.min.js"></script>
-  <script src="./libs/gg-editor/bundle.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/react@16.5.2/umd/react.production.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/react-dom@16.5.2/umd/react-dom.production.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/moment@2.22.2/min/moment.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/antd@3.10.1/dist/antd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gg-editor@1.2.5/dist/bundle.js"></script>
   <script src="../dist/bundle.js"></script>
   <script src="index.js"></script>
 </body>
