--- a/demo/index.html
+++ b/demo/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>UMind</title>
-  <link rel="stylesheet" href="//g.alicdn.com/code/lib/antd/3.10.7/antd.min.css">
+  <link rel="stylesheet" href="https://g.alicdn.com/code/lib/antd/3.10.7/antd.min.css">
 </head>
 <body>
   <div id="root"></div>
-  <script src="//g.alicdn.com/code/lib/react/16.6.1/umd/react.production.min.js"></script>
-  <script src="//g.alicdn.com/code/lib/react-dom/16.6.1/umd/react-dom.production.min.js"></script>
-  <script src="//g.alicdn.com/code/lib/moment.js/2.22.2/moment.min.js"></script>
-  <script src="//g.alicdn.com/code/lib/antd/3.10.7/antd.min.js"></script>
+  <script src="https://g.alicdn.com/code/lib/react/16.6.1/umd/react.production.min.js"></script>
+  <script src="https://g.alicdn.com/code/lib/react-dom/16.6.1/umd/react-dom.production.min.js"></script>
+  <script src="https://g.alicdn.com/code/lib/moment.js/2.22.2/moment.min.js"></script>
+  <script src="https://g.alicdn.com/code/lib/antd/3.10.7/antd.min.js"></script>
   <script src="../dist/bundle.js"></script>
   <script src="index.js"></script>
 </body>
